disable build job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,11 @@ on:
   push:
     # branches: [ main ]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    # tags: [ 'v*.*.*' ]
   # pull_request:
     # branches: [ main ]
+    branches:
+      - fake_aaaaaaaa # disable job
 
 env:
   # Use docker.io for Docker Hub if empty
